0.05
 - Add support for filtering by control fields.
 - Add support for filtering by material type.
 - Improve abstract and description.
 - Regen README file.
 - Move from List::MoreUtils to List::Util.

0.04 2025-04-13T09:05:18+02:00
 - Add -n option to number of output records.
 - Add support for leader filtering.
 - Add verbose mode.
 - Update copyright years.

0.03 2024-07-04T13:43:13+02:00
 - Add tests for run().
 - Rewrite arguments process to more intuitive way.
 - Rewrite run() tests to use help() helper.
 - Update Module::Install to 1.21 version.
 - Update copyright years.

0.02 2022-05-18T12:26:15+02:00
 - Fix example in doc.
 - Fix minimal dependency to MARC::File::XML (fixing of warning in tests).

0.01 2022-05-17T14:25:13+02:00
 - First version.