@@ -28,12 +28,12 @@ marc-filter - Tool to filter records in MARC dataset.
 
 =head1 SYNOPSIS
 
- marc-filter [-h] [-n num] [-o format] [-r] [--version] marc_xml_file field [subfield] value
+ marc-filter [-h] [-n num] [-o format] [-r] [--version] marc_xml_file search_item [sub_search_item] value
 
 =head1 DESCRIPTION
 
-Tool to filter MARC records in big datasets. Could filter by field/subfield or
-leader and/or by number of output records.
+Tool to filter MARC records in big datasets. Could filter by control field or field/subfield or
+leader or material type. Tool could filter by number of output records.
 
 It supports MARC XML files now.
 
@@ -69,11 +69,10 @@ Print version of script.
 
 MARC XML file name.
 
-=item * C<field>
+=item * C<search_item>
 
-MARC field.
-
-Field number or 'leader' string or material type string.
+Search item could be MARC control field or MARC field or 'leader' string or
+material type string.
 
 Possible material type strings are:
 
@@ -95,15 +94,13 @@ Possible material type strings are:
 
 =back
 
-=item * C<subfield>
+=item * C<sub_search_item>
 
-MARC subfield.
-
-It's optional in case of 'leader'.
+In the case of MARC field this could be a subfield.
 
 =item * C<value>
 
-MARC field/subfield or leader value to filter.
+Value to filter.
 
 =back
 
