@@ -3,6 +3,7 @@
  - Add support for filtering by material type.
  - Improve abstract and description.
  - Regen README file.
+ - Rename usage() of tool.
  - Move from List::MoreUtils to List::Util.
 
 0.04 2025-04-13T09:05:18+02:00
